--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,17 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<ul>
+  <li><strong>Teaching Assistant</strong>
+    <span class="middot-divider"></span> CE/CZ2002 Object Oriented Design & Programming <span class="mx-2">｜</span>
+    <span style="text-align:right!important" class="text-muted my-0">NTU 2024 Spring</span></li>
+  <li><strong>Teaching Assistant</strong>
+    <span class="middot-divider"></span> CE/CZ2002 Object Oriented Design & Programming <span class="mx-2">｜</span>
+    <span style="text-align:right!important" class="text-muted my-0">NTU 2023 Fall</span></li>
+  <li><strong>Teaching Assistant</strong><span class="middot-divider"></span> CE/CZ4123 Big Data Management <span class="mx-2">｜</span>
+    <span style="text-align:right!important" class="text-muted my-0">NTU 2023 Spring</span></li>
+  <li><strong>Teaching Assistant</strong><span class="middot-divider"></span> CE/CZ2006  Software Engineering <span class="mx-2">｜</span>
+    <span style="text-align:right!important" class="text-muted my-0">NTU 2023 Spring</span></li>
+  <li><strong>Teaching Assistant</strong><span class="middot-divider"></span> CE/CZ4123 Big Data Management <span class="mx-2">｜</span>
+    <span style="text-align:right!important" class="text-muted my-0">NTU 2022 Spring</span></li></ul>
